# Kumiko-GWS-Scraper

./: LICENSE  README.md  pyproject.toml
src/: main.py
src/genshin_wish_sim_utils/: wish.py
